; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_huge_memory.c_remap_page.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_huge_memory.c_remap_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@HPAGE_PMD_NR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.page*)* @remap_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remap_page(%struct.page* %0) #0 {
  %2 = alloca %struct.page*, align 8
  %3 = alloca i32, align 4
  store %struct.page* %0, %struct.page** %2, align 8
  %4 = load %struct.page*, %struct.page** %2, align 8
  %5 = call i64 @PageTransHuge(%struct.page* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.page*, %struct.page** %2, align 8
  %9 = load %struct.page*, %struct.page** %2, align 8
  %10 = call i32 @remove_migration_ptes(%struct.page* %8, %struct.page* %9, i32 1)
  br label %30

11:                                               ; preds = %1
  store i32 0, i32* %3, align 4
  br label %12

12:                                               ; preds = %26, %11
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @HPAGE_PMD_NR, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %12
  %17 = load %struct.page*, %struct.page** %2, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.page, %struct.page* %17, i64 %19
  %21 = load %struct.page*, %struct.page** %2, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.page, %struct.page* %21, i64 %23
  %25 = call i32 @remove_migration_ptes(%struct.page* %20, %struct.page* %24, i32 1)
  br label %26

26:                                               ; preds = %16
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %12

29:                                               ; preds = %12
  br label %30

30:                                               ; preds = %29, %7
  ret void
}

declare dso_local i64 @PageTransHuge(%struct.page*) #1

declare dso_local i32 @remove_migration_ptes(%struct.page*, %struct.page*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
